# Trabalho-IA

./: CMakeLists.txt  Dockerfile  README.md  build.sh  main  main.cpp  parser.cpp
gui/: gui.cpp  gui.hpp
mazes/100x100/: exemplo_labirinto.txt
mazes/10x10/: exemplo_labirinto.txt
mazes/200x200/: exemplo_labirinto.txt
mazes/50x50/: exemplo_labirinto.txt
parser/: parser.cpp  parser.hpp
search/: AStar.cpp  AStar.hpp  iterativeDepth.cpp  iterativeDepth.hpp  search.cpp  search.hpp
